added eureka client dependency and register it to eureka client.